--- a/Exercises/Case-02.html
+++ b/Exercises/Case-02.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="/css/Case-02.css">
 </head>
 <body>
-    <div class="circle">
-        <div class="circle-gray" id="circle-gray"></div>
-        <div class="paragraph">
+    <div class="gray-circle">
+        <div class="border-circle"></div>
             <p>RWAD</p>
         </div>
     </div>
